--- a/.github/workflows/on_tag_pushed.yml
+++ b/.github/workflows/on_tag_pushed.yml
@@ -29,6 +29,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - run: |
           TAG=$(echo $GITHUB_REF | cut -d / -f 3)
+          echo "Query:"
           echo ::set-output name=tag::${TAG}
           echo "tag: $TAG, data: ${{ steps.get_repo_names.outputs.data }}"
     outputs:
