--- a/.github/workflows/on_tag_pushed.yml
+++ b/.github/workflows/on_tag_pushed.yml
@@ -12,7 +12,7 @@ jobs:
         id: get_repo_names
         with:
           query: |
-            query getRepoNames() {
+            query getRepoNames {
               search(query: "org:qooxdoo", type: REPOSITORY, first: 100) {
                 repositoryCount
                 edges {
