--- a/.github/workflows/on_tag_pushed.yml
+++ b/.github/workflows/on_tag_pushed.yml
@@ -22,7 +22,10 @@ jobs:
         run: echo "::set-output name=tag::$(echo $GITHUB_REF | cut -d / -f 3)"
       - id: transform
         run: |
-          DATA=$(node -e "let d=${{ steps.get_repo_names.outputs.data }}; console.log(d.data.search.edges.map(node=>node.name));")
+          DATA=$(node <<HEREDOC
+          let d=${{ steps.get_repo_names.outputs.data }}
+          console.log(d.search.edges.map(node=>node.name));
+          HEREDOC)
           echo "::set-output name=repos::$DATA"
 
     outputs:
