--- a/.github/workflows/on_tag_pushed.yml
+++ b/.github/workflows/on_tag_pushed.yml
@@ -1,11 +1,10 @@
 on:
   push:
-    branches:
-      - "*"
     tags:
       - "*"
 jobs:
   provide_repository_names:
+    name: Get all repo names in ${{ github.repository_owner }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/setup-node@v2
@@ -23,7 +22,7 @@ jobs:
       - id: transform
         run: |
           node << HEREDOC > data.json
-          let d=${{ steps.get_repo_names.outputs.data }}
+          let d=${{ steps.get_repo_names.outputs.data }};
           d = d.search.edges.map(item=>item.node.name);
           console.log(JSON.stringify(d,null,0));
           HEREDOC
@@ -33,6 +32,7 @@ jobs:
       tag:   ${{ steps.get_tag_name.outputs.tag }}
 
   debug:
+    name: Debug results of previous job
     runs-on: ubuntu-latest
     needs:
       - provide_repository_names
@@ -42,16 +42,16 @@ jobs:
           echo "tag: ${{ needs.provide_repository_names.outputs.tag }}"
 
   dispatch:
+    name: Send repository_dispatch event
     needs:
       - provide_repository_names
-    #    if: github.event.base_ref == 'refs/heads/master'
+    if: github.event.base_ref == 'refs/heads/master'
     strategy:
       matrix:
         repo: ${{ fromJson(needs.provide_repository_names.outputs.repos) }}
     runs-on: ubuntu-latest
     steps:
-      - name: Repository Dispatch
-        uses: peter-evans/repository-dispatch@v1
+      - uses: peter-evans/repository-dispatch@v1
         with:
           token: ${{ secrets.REPOSITORY_DISPATCH }}
           repository: ${{ github.repository_owner }}/${{ matrix.repo }}
